--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Sippure</string>
+    <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_activity_add_product">AddProductActivity</string>
+    <string name="title_activity_update_product">UpdateProductActivity</string>
 </resources>
